sema/testdata/gcc-c99-extra/reject/fltconst-double-pedantic-2.c
double a = 1.d;
double b = 1.D;
double c = 1.1e+2d;

double d = 1.di;
double e = 1.dj;
double f = 1.id;
double g = 1.jd;

double h = 0x1.5p1d;
